--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,9 @@
     <title>{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="{{ site.baseurl }}css/bootstrap-3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}css/main.css">
+        <link rel="stylesheet" href="{{ '/css/bootstrap-3.3.6/css/bootstrap.min.css' | relative_url }}">
+        <link rel="stylesheet" href="{{ '/css/main.css' | relative_url }}">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
