--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,9 +2,9 @@
   <div class="col-lg-8 col-lg-offset-2">
     <div class="menu">
       <ul>
-          <li><a href="{{ site.baseurl }}">home</a></li>
-          <li><a href="{{ site.baseurl }}ctf/">ctf</a></li>
-          <li><a href="{{ site.baseurl }}articles/">*articles</a></li>
+          <li><a href="{{ '/' | relative_url }}">home</a></li>
+          <li><a href="{{ '/ctf/' | relative_url }}">ctf</a></li>
+          <li><a href="{{ '/articles/' | relative_url }}">articles</a></li>
       </ul>
     </div>
   </div>
